常规维护，不要更新

--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/menu_admin.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/menu_admin.html
@@ -15,11 +15,11 @@
 						<a th:href="@{/admin/m/base/info/list.gsp}"> <i class="layui-icon">&#xe621;</i> <cite> 文章管理</cite>
 						</a>
 					</dd>
-					<dd th:classappend="${child=='special'} ? 'layui-this'">
+					<!-- <dd th:classappend="${child=='special'} ? 'layui-this'">
 						<a th:href="@{/admin/m/base/special/list.gsp}"> <i class="layui-icon">&#xe62c;</i> <cite> 专题管理</cite>
 						</a>
 					</dd>
-					<!-- <dd th:classappend="${child=='comment'} ? 'layui-this'">
+					<dd th:classappend="${child=='comment'} ? 'layui-this'">
 						<a th:href="@{/admin/m/ext/guestbook/list.gsp}"> <i class="layui-icon">&#xe628;</i> <cite> 评论管理</cite>
 						</a>
 					</dd> -->
