--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/guestbook/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/guestbook/edit.html
@@ -25,7 +25,7 @@
 						<legend>留言管理-回复</legend>
 					</fieldset>
 					<div class="layui-form-item">
-						<label class="layui-form-label">专题类别：<span style="color: red">*</span></label>
+						<label class="layui-form-label">状态：<span style="color: red">*</span></label>
 						<div class="layui-input-block">
 							<select th:field="*{state}" lay-verify="required">
 								<option value="1">审核通过</option>
