--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/core/uum/user/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/core/uum/user/edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title th:text="|#{customer.systemTitle}-用户权限-组织机构维度|">图灵谷</title>
+<title th:text="|#{customer.systemTitle}-用户权限-用户管理-修改用户|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
 </head>
 <body>
@@ -15,9 +15,6 @@
 					<span class="layui-breadcrumb"> <a><cite>用户权限</cite></a> <a th:href="@{/admin/c/user/list.gsp}">用户管理</a> <a><cite>修改</cite></a>
 					</span>
 				</div>
-				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
-					<i class="layui-icon">&#xe60b;</i> 用户修改
-				</blockquote>
 				<form th:action="@{/admin/c/user/edit.gsp}" th:object="${result}" id="editForm" role="form" action="#" class="form-horizontal" method="post">
 					<fieldset class="layui-elem-field layui-field-title">
 						<legend>修改用户</legend>
