--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/global/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/global/edit.html
@@ -15,9 +15,6 @@
 					<span class="layui-breadcrumb"> <a><cite>全局配置</cite></a> <a><cite>全局参数</cite></a>
 					</span>
 				</div>
-				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
-					<i class="layui-icon">&#xe60b;</i> 全局参数
-				</blockquote>
 				<form th:action="@{/admin/c/global/edit.gsp}" th:object="${result}" class="layui-form" id="editForm" role="form" action="#" method="post">
 					<input th:field="*{id}" type="text" hidden="true" />
 					<fieldset class="layui-elem-field site-demo-button">
@@ -89,7 +86,7 @@
 						</div>
 						<div class="layui-form-item">
 							<div class="layui-inline" style="width: 300px;">
-								<label class="layui-form-label">是否包含域名：<span style="color: red">*</span></label>
+								<label class="layui-form-label">包含域名：<span style="color: red">*</span></label>
 								<div class="layui-input-block">
 									<select name="withDomain" th:field="*{withDomain}">
 										<option value="1">是</option>
