--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/specialType/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/specialType/list.html
@@ -15,13 +15,11 @@
 					<span class="layui-breadcrumb"> <a><cite>站点管理</cite></a> <a href="#">专题分类</a> <a><cite>列表</cite></a>
 					</span>
 				</div>
-				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
-					<i class="layui-icon">&#xe60b;</i> 专题分类
-				</blockquote>
 				<blockquote class="layui-elem-quote layui-quote-nm">
 					<div class="layui-inline">
 						<div class="layui-input-inline">
-							<a th:href="@{/admin/m/base/specialType/add.gsp}" class="layui-btn"> <i class="layui-icon">&#xe608;</i> 新增</a>
+							<a th:href="@{/admin/m/base/specialType/add.gsp}" class="layui-btn"> <i class="layui-icon">&#xe608;</i> 新增
+							</a>
 						</div>
 					</div>
 				</blockquote>
@@ -33,9 +31,9 @@
 							<th width="200">类型名称</th>
 							<th width="100">关键字</th>
 							<th width="40">排序</th>
-                            <th width="80">浏览总数</th>
-							<th >描述</th>							
-							<th width="200">创建日期</th>							
+							<th width="80">浏览总数</th>
+							<th>描述</th>
+							<th width="200">创建日期</th>
 							<th width="90">操作</th>
 						</tr>
 					</thead>
@@ -47,11 +45,11 @@
 							<td th:text="${specialTypeList.pageSize*(specialTypeList.page-1)+itemStat.index+1}" style="text-align: center;"></td>
 							<td class="layui-form"><input lay-filter="filter" th:id="${item.id}" lay-skin="switch" type="checkbox" th:attr="checked=${item.enabled ==1}"></td>
 							<td th:text="${item.typeName}" style="text-align: center;"></td>
-							<td th:text="${item.metaKeywords}" style="text-align: center;"></td>							
+							<td th:text="${item.metaKeywords}" style="text-align: center;"></td>
 							<td th:text="${item.sortOrder}" style="text-align: center;"></td>
 							<td th:text="${item.viewsCount}" style="text-align: center;"></td>
 							<td th:text="${item.metaDescription}" style="text-align: center;"></td>
-							<td th:text="${item.createDataTime}==null?'':${#dates.format(item.createDataTime,'yyyy-MM-dd HH:mm:ss')}" style="text-align: center;"></td>							
+							<td th:text="${item.createDataTime}==null?'':${#dates.format(item.createDataTime,'yyyy-MM-dd HH:mm:ss')}" style="text-align: center;"></td>
 							<td><a th:href="|@{/admin/m/base/specialType/edit_}${item.id}.gsp|" class="layui-btn layui-btn-small"> <i class="layui-icon"></i></a> <a th:onclick="|del('${item.id}')|" class="layui-btn layui-btn-normal layui-btn-small"> <i class="layui-icon"></i></a></td>
 						</tr>
 					</tbody>
