常规维护 不要更新

--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/core/monitor/logLoginList.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/core/monitor/logLoginList.html
@@ -46,7 +46,7 @@
 							<th width="40px">结果</th>
 							<th width="120px">用户</th>
 							<th width="120px">ip</th>
-							<th width="200px">登录地址</th>
+							<th>登录地址</th>
 							<th width="150px">登录时间</th>
 						</tr>
 					</thead>
